<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activityStoreFront"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/activityStoreFrontViewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.viewpager2.widget.ViewPager2>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewPagerButtonBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:text="@string/button_buy" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/viewPagerButtonStoreFront"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.5"
            android:text="@string/button_store_front" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/viewPagerButtonBackEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.5"
            android:text="@string/button_back_end" />
    </LinearLayout>
</LinearLayout>